--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-native-firebase/app": "^22.4.0",
     "@react-native-firebase/auth": "^22.4.0",
     "@react-native-firebase/firestore": "^22.4.0",
+    "@react-native-firebase/functions": "^22.4.0",
+    "@react-native-firebase/messaging": "^22.4.0",
     "@react-native/new-app-screen": "0.80.1",
     "@react-navigation/native": "^7.1.14",
     "@react-navigation/stack": "^7.4.2",
